[package]
name = "enlighten"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.14.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = {version ="1.0.104", features=["derive"]}
thiserror = "1.0.9"
rand = "0.7.3"
log = "0.4.8"
log4rs = "0.9.0"
